// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`date-range-time-picker-component (input-group mode) renders and matches snapshot 1`] = `
<date-range-time-picker-component value="">
  <div class="date-picker">
    <div class="dropdown-wrapper">
      <div class="form-group form-input-group-basic">
        <label class="form-control-label" for="date-range-time" id="date-range-time-9-g3is-label">
          <span>
            Date and Time Picker
          </span>
        </label>
        <div>
          <div aria-label="Date and time picker group" class="input-group" role="group">
            <div class="drp-input-field">
              <input aria-describedby="date-range-time-9-g3is-dialog-desc" aria-labelledby="date-range-time-9-g3is-label" autocomplete="off" class="form-control" id="date-range-time" placeholder="YYYY-MM-DD HH:MM - YYYY-MM-DD HH:MM" type="text" value="">
            </div>
            <div class="input-group-append">
              <button aria-controls="date-range-time-9-g3is-dropdown" aria-expanded="false" aria-haspopup="dialog" aria-label="Toggle calendar picker" class="btn calendar-button input-group-text" type="button">
                <i aria-hidden="true" class="fa-calendar-alt fas"></i>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div class="dropdown" id="date-range-time-9-g3is-dropdown">
        <div aria-describedby="date-range-time-9-g3is-dialog-desc" aria-labelledby="date-range-time-9-g3is-dialog-title" aria-modal="true" class="dropdown-content" role="dialog" tabindex="-1">
          <div class="sr-only visually-hidden" id="date-range-time-9-g3is-dialog-title">
            Date and Time Picker
          </div>
          <div class="sr-only visually-hidden" id="date-range-time-9-g3is-dialog-desc">
            Select a start date and end date. Use arrow keys to navigate days. Press Enter to select. Enter times in HH:MM.
          </div>
          <div class="date-picker">
            <div class="range-picker-wrapper">
              <div aria-label="Navigation controls" class="mb-1 range-picker-nav">
                <button aria-label="Previous month" class="btn-outline-secondary range-picker-nav-btn" type="button">
                  <svg aria-hidden="true" focusable="false" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c-12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path>
                  </svg>
                </button>
                <div class="selectors">
                  <label class="sr-only visually-hidden" for="date-range-time-9-g3is-months" id="date-range-time-9-g3is-month-label">
                    Select month
                  </label>
                  <select aria-labelledby="date-range-time-9-g3is-month-label" class="form-control form-select months select-sm" id="date-range-time-9-g3is-months">
                    <option value="0">
                      January
                    </option>
                    <option value="1">
                      February
                    </option>
                    <option value="2">
                      March
                    </option>
                    <option value="3">
                      April
                    </option>
                    <option value="4">
                      May
                    </option>
                    <option value="5">
                      June
                    </option>
                    <option selected="" value="6">
                      July
                    </option>
                    <option value="7">
                      August
                    </option>
                    <option value="8">
                      September
                    </option>
                    <option value="9">
                      October
                    </option>
                    <option value="10">
                      November
                    </option>
                    <option value="11">
                      December
                    </option>
                  </select>
                  <label class="sr-only visually-hidden" for="date-range-time-9-g3is-year" id="date-range-time-9-g3is-year-label">
                    Select year
                  </label>
                  <select aria-labelledby="date-range-time-9-g3is-year-label" class="form-control form-select select-sm years" id="date-range-time-9-g3is-year">
                    <option value="2014">
                      2014
                    </option>
                    <option value="2015">
                      2015
                    </option>
                    <option value="2016">
                      2016
                    </option>
                    <option value="2017">
                      2017
                    </option>
                    <option value="2018">
                      2018
                    </option>
                    <option value="2019">
                      2019
                    </option>
                    <option value="2020">
                      2020
                    </option>
                    <option value="2021">
                      2021
                    </option>
                    <option value="2022">
                      2022
                    </option>
                    <option value="2023">
                      2023
                    </option>
                    <option value="2024">
                      2024
                    </option>
                    <option value="2025">
                      2025
                    </option>
                    <option selected="" value="2026">
                      2026
                    </option>
                    <option value="2027">
                      2027
                    </option>
                    <option value="2028">
                      2028
                    </option>
                    <option value="2029">
                      2029
                    </option>
                    <option value="2030">
                      2030
                    </option>
                    <option value="2031">
                      2031
                    </option>
                    <option value="2032">
                      2032
                    </option>
                    <option value="2033">
                      2033
                    </option>
                    <option value="2034">
                      2034
                    </option>
                  </select>
                  <button aria-label="Reset calendar" class="reset-btn" type="button">
                    <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                      <path d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z"></path>
                    </svg>
                  </button>
                </div>
                <button aria-label="Next month" class="btn-outline-secondary range-picker-nav-btn" type="button">
                  <svg aria-hidden="true" focusable="false" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
                    <path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
                  </svg>
                </button>
              </div>
              <div class="range-picker">
                <div aria-label="Calendars" class="calendar-wrapper" tabindex="0">
                  <div class="calendar dp-calendar form-control h-auto pt-2 text-center">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="date-range-time-9-g3is-grid-start-caption">
                      July 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div aria-label="Calendar for July 2026" aria-labelledby="date-range-time-9-g3is-grid-start-caption" aria-roledescription="Calendar" class="calendar-grid" id="date-range-time-9-g3is-grid-start" role="grid">
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="June 28, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-28" data-day="28" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            28
                          </span>
                        </div>
                        <div aria-label="June 29, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-29" data-day="29" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            29
                          </span>
                        </div>
                        <div aria-label="June 30, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-30" data-day="30" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            30
                          </span>
                        </div>
                        <div aria-label="July 1, 2026" class="calendar-grid-item csm-first-day" data-date="2026-07-01" data-day="1" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            1
                          </span>
                        </div>
                        <div aria-label="July 2, 2026" class="calendar-grid-item" data-date="2026-07-02" data-day="2" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            2
                          </span>
                        </div>
                        <div aria-label="July 3, 2026" class="calendar-grid-item" data-date="2026-07-03" data-day="3" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            3
                          </span>
                        </div>
                        <div aria-label="July 4, 2026" class="calendar-grid-item" data-date="2026-07-04" data-day="4" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            4
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="July 5, 2026" class="calendar-grid-item" data-date="2026-07-05" data-day="5" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            5
                          </span>
                        </div>
                        <div aria-label="July 6, 2026" class="calendar-grid-item" data-date="2026-07-06" data-day="6" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            6
                          </span>
                        </div>
                        <div aria-label="July 7, 2026" class="calendar-grid-item" data-date="2026-07-07" data-day="7" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            7
                          </span>
                        </div>
                        <div aria-label="July 8, 2026" class="calendar-grid-item" data-date="2026-07-08" data-day="8" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            8
                          </span>
                        </div>
                        <div aria-label="July 9, 2026" class="calendar-grid-item" data-date="2026-07-09" data-day="9" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            9
                          </span>
                        </div>
                        <div aria-label="July 10, 2026" class="calendar-grid-item" data-date="2026-07-10" data-day="10" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            10
                          </span>
                        </div>
                        <div aria-label="July 11, 2026" class="calendar-grid-item" data-date="2026-07-11" data-day="11" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            11
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="July 12, 2026" class="calendar-grid-item" data-date="2026-07-12" data-day="12" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            12
                          </span>
                        </div>
                        <div aria-label="July 13, 2026" class="calendar-grid-item" data-date="2026-07-13" data-day="13" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            13
                          </span>
                        </div>
                        <div aria-label="July 14, 2026" class="calendar-grid-item" data-date="2026-07-14" data-day="14" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            14
                          </span>
                        </div>
                        <div aria-label="July 15, 2026" class="calendar-grid-item" data-date="2026-07-15" data-day="15" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            15
                          </span>
                        </div>
                        <div aria-label="July 16, 2026" class="calendar-grid-item" data-date="2026-07-16" data-day="16" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            16
                          </span>
                        </div>
                        <div aria-label="July 17, 2026" class="calendar-grid-item" data-date="2026-07-17" data-day="17" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            17
                          </span>
                        </div>
                        <div aria-label="July 18, 2026" class="calendar-grid-item" data-date="2026-07-18" data-day="18" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            18
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="July 19, 2026" class="calendar-grid-item" data-date="2026-07-19" data-day="19" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            19
                          </span>
                        </div>
                        <div aria-label="July 20, 2026" class="calendar-grid-item" data-date="2026-07-20" data-day="20" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            20
                          </span>
                        </div>
                        <div aria-label="July 21, 2026" class="calendar-grid-item" data-date="2026-07-21" data-day="21" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            21
                          </span>
                        </div>
                        <div aria-label="July 22, 2026" class="calendar-grid-item" data-date="2026-07-22" data-day="22" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light current-day font-weight-bold rounded-circle text-dark text-nowrap">
                            22
                          </span>
                        </div>
                        <div aria-label="July 23, 2026" class="calendar-grid-item" data-date="2026-07-23" data-day="23" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            23
                          </span>
                        </div>
                        <div aria-label="July 24, 2026" class="calendar-grid-item" data-date="2026-07-24" data-day="24" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            24
                          </span>
                        </div>
                        <div aria-label="July 25, 2026" class="calendar-grid-item" data-date="2026-07-25" data-day="25" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            25
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="July 26, 2026" class="calendar-grid-item" data-date="2026-07-26" data-day="26" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            26
                          </span>
                        </div>
                        <div aria-label="July 27, 2026" class="calendar-grid-item" data-date="2026-07-27" data-day="27" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            27
                          </span>
                        </div>
                        <div aria-label="July 28, 2026" class="calendar-grid-item" data-date="2026-07-28" data-day="28" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            28
                          </span>
                        </div>
                        <div aria-label="July 29, 2026" class="calendar-grid-item" data-date="2026-07-29" data-day="29" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            29
                          </span>
                        </div>
                        <div aria-label="July 30, 2026" class="calendar-grid-item" data-date="2026-07-30" data-day="30" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            30
                          </span>
                        </div>
                        <div aria-label="July 31, 2026" class="calendar-grid-item csm-last-day" data-date="2026-07-31" data-day="31" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            31
                          </span>
                        </div>
                        <div aria-label="August 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-01" data-day="1" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            1
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-02" data-day="2" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            2
                          </span>
                        </div>
                        <div aria-label="August 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-03" data-day="3" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            3
                          </span>
                        </div>
                        <div aria-label="August 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-04" data-day="4" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            4
                          </span>
                        </div>
                        <div aria-label="August 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-05" data-day="5" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            5
                          </span>
                        </div>
                        <div aria-label="August 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-06" data-day="6" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            6
                          </span>
                        </div>
                        <div aria-label="August 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-07" data-day="7" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            7
                          </span>
                        </div>
                        <div aria-label="August 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-08" data-day="8" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            8
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div class="calendar dp-calendar form-control h-auto pt-2 text-center">
                    <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="date-range-time-9-g3is-grid-end-caption">
                      August 2026
                    </div>
                    <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
                      <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                        Sun
                      </small>
                      <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                        Mon
                      </small>
                      <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                        Tue
                      </small>
                      <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                        Wed
                      </small>
                      <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                        Thu
                      </small>
                      <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                        Fri
                      </small>
                      <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                        Sat
                      </small>
                    </div>
                    <div aria-label="Calendar for August 2026" aria-labelledby="date-range-time-9-g3is-grid-end-caption" aria-roledescription="Calendar" class="calendar-grid" id="date-range-time-9-g3is-grid-end" role="grid">
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="July 26, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-26" data-day="26" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            26
                          </span>
                        </div>
                        <div aria-label="July 27, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-27" data-day="27" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            27
                          </span>
                        </div>
                        <div aria-label="July 28, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-28" data-day="28" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            28
                          </span>
                        </div>
                        <div aria-label="July 29, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-29" data-day="29" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            29
                          </span>
                        </div>
                        <div aria-label="July 30, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-30" data-day="30" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            30
                          </span>
                        </div>
                        <div aria-label="July 31, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-31" data-day="31" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            31
                          </span>
                        </div>
                        <div aria-label="August 1, 2026" class="calendar-grid-item cem-first-day" data-date="2026-08-01" data-day="1" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            1
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 2, 2026" class="calendar-grid-item" data-date="2026-08-02" data-day="2" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            2
                          </span>
                        </div>
                        <div aria-label="August 3, 2026" class="calendar-grid-item" data-date="2026-08-03" data-day="3" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            3
                          </span>
                        </div>
                        <div aria-label="August 4, 2026" class="calendar-grid-item" data-date="2026-08-04" data-day="4" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            4
                          </span>
                        </div>
                        <div aria-label="August 5, 2026" class="calendar-grid-item" data-date="2026-08-05" data-day="5" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            5
                          </span>
                        </div>
                        <div aria-label="August 6, 2026" class="calendar-grid-item" data-date="2026-08-06" data-day="6" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            6
                          </span>
                        </div>
                        <div aria-label="August 7, 2026" class="calendar-grid-item" data-date="2026-08-07" data-day="7" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            7
                          </span>
                        </div>
                        <div aria-label="August 8, 2026" class="calendar-grid-item" data-date="2026-08-08" data-day="8" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            8
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 9, 2026" class="calendar-grid-item" data-date="2026-08-09" data-day="9" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            9
                          </span>
                        </div>
                        <div aria-label="August 10, 2026" class="calendar-grid-item" data-date="2026-08-10" data-day="10" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            10
                          </span>
                        </div>
                        <div aria-label="August 11, 2026" class="calendar-grid-item" data-date="2026-08-11" data-day="11" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            11
                          </span>
                        </div>
                        <div aria-label="August 12, 2026" class="calendar-grid-item" data-date="2026-08-12" data-day="12" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            12
                          </span>
                        </div>
                        <div aria-label="August 13, 2026" class="calendar-grid-item" data-date="2026-08-13" data-day="13" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            13
                          </span>
                        </div>
                        <div aria-label="August 14, 2026" class="calendar-grid-item" data-date="2026-08-14" data-day="14" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            14
                          </span>
                        </div>
                        <div aria-label="August 15, 2026" class="calendar-grid-item" data-date="2026-08-15" data-day="15" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            15
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 16, 2026" class="calendar-grid-item" data-date="2026-08-16" data-day="16" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            16
                          </span>
                        </div>
                        <div aria-label="August 17, 2026" class="calendar-grid-item" data-date="2026-08-17" data-day="17" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            17
                          </span>
                        </div>
                        <div aria-label="August 18, 2026" class="calendar-grid-item" data-date="2026-08-18" data-day="18" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            18
                          </span>
                        </div>
                        <div aria-label="August 19, 2026" class="calendar-grid-item" data-date="2026-08-19" data-day="19" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            19
                          </span>
                        </div>
                        <div aria-label="August 20, 2026" class="calendar-grid-item" data-date="2026-08-20" data-day="20" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            20
                          </span>
                        </div>
                        <div aria-label="August 21, 2026" class="calendar-grid-item" data-date="2026-08-21" data-day="21" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            21
                          </span>
                        </div>
                        <div aria-label="August 22, 2026" class="calendar-grid-item" data-date="2026-08-22" data-day="22" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            22
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 23, 2026" class="calendar-grid-item" data-date="2026-08-23" data-day="23" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            23
                          </span>
                        </div>
                        <div aria-label="August 24, 2026" class="calendar-grid-item" data-date="2026-08-24" data-day="24" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            24
                          </span>
                        </div>
                        <div aria-label="August 25, 2026" class="calendar-grid-item" data-date="2026-08-25" data-day="25" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            25
                          </span>
                        </div>
                        <div aria-label="August 26, 2026" class="calendar-grid-item" data-date="2026-08-26" data-day="26" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            26
                          </span>
                        </div>
                        <div aria-label="August 27, 2026" class="calendar-grid-item" data-date="2026-08-27" data-day="27" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            27
                          </span>
                        </div>
                        <div aria-label="August 28, 2026" class="calendar-grid-item" data-date="2026-08-28" data-day="28" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            28
                          </span>
                        </div>
                        <div aria-label="August 29, 2026" class="calendar-grid-item" data-date="2026-08-29" data-day="29" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            29
                          </span>
                        </div>
                      </div>
                      <div class="calendar-grid-row" role="row" style="display: contents;">
                        <div aria-label="August 30, 2026" class="calendar-grid-item" data-date="2026-08-30" data-day="30" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            30
                          </span>
                        </div>
                        <div aria-label="August 31, 2026" class="calendar-grid-item cem-last-day" data-date="2026-08-31" data-day="31" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                            31
                          </span>
                        </div>
                        <div aria-label="September 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-01" data-day="1" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            1
                          </span>
                        </div>
                        <div aria-label="September 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-02" data-day="2" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            2
                          </span>
                        </div>
                        <div aria-label="September 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-03" data-day="3" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            3
                          </span>
                        </div>
                        <div aria-label="September 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-04" data-day="4" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            4
                          </span>
                        </div>
                        <div aria-label="September 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-05" data-day="5" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                          <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                            5
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <footer class="border-top small text-center">
                  <div aria-live="polite" class="small">
                    Use cursor keys to navigate calendar dates
                  </div>
                </footer>
                <div aria-labelledby="date-range-time-9-g3is-date-ranges-title" class="date-range-display" role="region" tabindex="0">
                  <div class="sr-only visually-hidden" id="date-range-time-9-g3is-date-ranges-title">
                    Selected date and time range
                  </div>
                  <div class="date-ranges">
                    <span class="start-end-ranges">
                      <span class="start-date">
                        N/A
                      </span>
                      <label class="sr-only visually-hidden" for="date-range-time-9-g3is-start-time" id="date-range-time-9-g3is-start-time-label">
                        Start time
                      </label>
                      <input aria-describedby="date-range-time-9-g3is-warning" aria-labelledby="date-range-time-9-g3is-start-time-label" autocomplete="off" class="form-control time-input" data-type="start" id="date-range-time-9-g3is-start-time" inputmode="numeric" maxlength="5" type="text" value="00:00">
                      <span class="to-spacing">
                        -
                      </span>
                      <span class="end-date">
                        N/A
                      </span>
                      <label class="sr-only visually-hidden" for="date-range-time-9-g3is-end-time" id="date-range-time-9-g3is-end-time-label">
                        End time
                      </label>
                      <input aria-describedby="date-range-time-9-g3is-warning" aria-labelledby="date-range-time-9-g3is-end-time-label" autocomplete="off" class="form-control time-input" data-type="end" id="date-range-time-9-g3is-end-time" inputmode="numeric" maxlength="5" type="text" value="00:00">
                    </span>
                  </div>
                  <div aria-live="assertive" class="warning-message" id="date-range-time-9-g3is-warning"></div>
                </div>
              </div>
              <div class="ok-button">
                <button aria-label="Confirm or close date picker" class="btn btn-primary" type="button">
                  Close
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</date-range-time-picker-component>
`;

exports[`date-range-time-picker-component (rangeTimePicker mode) renders and matches snapshot (initial) 1`] = `
<date-range-time-picker-component range-time-picker="true">
  <div class="date-picker">
    <div class="range-picker-wrapper">
      <div aria-label="Navigation controls" class="mb-1 range-picker-nav">
        <button aria-label="Previous month" class="btn-outline-secondary range-picker-nav-btn" type="button">
          <svg aria-hidden="true" focusable="false" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
            <path d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c-12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"></path>
          </svg>
        </button>
        <div class="selectors">
          <label class="sr-only visually-hidden" for="date-range-time-1-3gd7-months" id="date-range-time-1-3gd7-month-label">
            Select month
          </label>
          <select aria-labelledby="date-range-time-1-3gd7-month-label" class="form-control form-select months select-sm" id="date-range-time-1-3gd7-months">
            <option value="0">
              January
            </option>
            <option value="1">
              February
            </option>
            <option value="2">
              March
            </option>
            <option value="3">
              April
            </option>
            <option value="4">
              May
            </option>
            <option value="5">
              June
            </option>
            <option selected="" value="6">
              July
            </option>
            <option value="7">
              August
            </option>
            <option value="8">
              September
            </option>
            <option value="9">
              October
            </option>
            <option value="10">
              November
            </option>
            <option value="11">
              December
            </option>
          </select>
          <label class="sr-only visually-hidden" for="date-range-time-1-3gd7-year" id="date-range-time-1-3gd7-year-label">
            Select year
          </label>
          <select aria-labelledby="date-range-time-1-3gd7-year-label" class="form-control form-select select-sm years" id="date-range-time-1-3gd7-year">
            <option value="2014">
              2014
            </option>
            <option value="2015">
              2015
            </option>
            <option value="2016">
              2016
            </option>
            <option value="2017">
              2017
            </option>
            <option value="2018">
              2018
            </option>
            <option value="2019">
              2019
            </option>
            <option value="2020">
              2020
            </option>
            <option value="2021">
              2021
            </option>
            <option value="2022">
              2022
            </option>
            <option value="2023">
              2023
            </option>
            <option value="2024">
              2024
            </option>
            <option value="2025">
              2025
            </option>
            <option selected="" value="2026">
              2026
            </option>
            <option value="2027">
              2027
            </option>
            <option value="2028">
              2028
            </option>
            <option value="2029">
              2029
            </option>
            <option value="2030">
              2030
            </option>
            <option value="2031">
              2031
            </option>
            <option value="2032">
              2032
            </option>
            <option value="2033">
              2033
            </option>
            <option value="2034">
              2034
            </option>
          </select>
          <button aria-label="Reset calendar" class="reset-btn" type="button">
            <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
              <path d="M48.5 224L40 224c-13.3 0-24-10.7-24-24L16 72c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2L98.6 96.6c87.6-86.5 228.7-86.2 315.8 1c87.5 87.5 87.5 229.3 0 316.8s-229.3 87.5-316.8 0c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0c62.5 62.5 163.8 62.5 226.3 0s62.5-163.8 0-226.3c-62.2-62.2-162.7-62.5-225.3-1L185 183c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8L48.5 224z"></path>
            </svg>
          </button>
        </div>
        <button aria-label="Next month" class="btn-outline-secondary range-picker-nav-btn" type="button">
          <svg aria-hidden="true" focusable="false" viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
            <path d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z"></path>
          </svg>
        </button>
      </div>
      <div class="range-picker">
        <div aria-label="Calendars" class="calendar-wrapper" tabindex="0">
          <div class="calendar dp-calendar form-control h-auto pt-2 text-center">
            <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="date-range-time-1-3gd7-grid-start-caption">
              July 2026
            </div>
            <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
              <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                Sun
              </small>
              <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                Mon
              </small>
              <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                Tue
              </small>
              <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                Wed
              </small>
              <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                Thu
              </small>
              <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                Fri
              </small>
              <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                Sat
              </small>
            </div>
            <div aria-label="Calendar for July 2026" aria-labelledby="date-range-time-1-3gd7-grid-start-caption" aria-roledescription="Calendar" class="calendar-grid" id="date-range-time-1-3gd7-grid-start" role="grid">
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="June 28, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-28" data-day="28" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    28
                  </span>
                </div>
                <div aria-label="June 29, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-29" data-day="29" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    29
                  </span>
                </div>
                <div aria-label="June 30, 2026" class="calendar-grid-item previous-month-day" data-date="2026-06-30" data-day="30" data-month="6" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    30
                  </span>
                </div>
                <div aria-label="July 1, 2026" class="calendar-grid-item csm-first-day" data-date="2026-07-01" data-day="1" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    1
                  </span>
                </div>
                <div aria-label="July 2, 2026" class="calendar-grid-item" data-date="2026-07-02" data-day="2" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    2
                  </span>
                </div>
                <div aria-label="July 3, 2026" class="calendar-grid-item" data-date="2026-07-03" data-day="3" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    3
                  </span>
                </div>
                <div aria-label="July 4, 2026" class="calendar-grid-item" data-date="2026-07-04" data-day="4" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    4
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="July 5, 2026" class="calendar-grid-item" data-date="2026-07-05" data-day="5" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    5
                  </span>
                </div>
                <div aria-label="July 6, 2026" class="calendar-grid-item" data-date="2026-07-06" data-day="6" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    6
                  </span>
                </div>
                <div aria-label="July 7, 2026" class="calendar-grid-item" data-date="2026-07-07" data-day="7" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    7
                  </span>
                </div>
                <div aria-label="July 8, 2026" class="calendar-grid-item" data-date="2026-07-08" data-day="8" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    8
                  </span>
                </div>
                <div aria-label="July 9, 2026" class="calendar-grid-item" data-date="2026-07-09" data-day="9" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    9
                  </span>
                </div>
                <div aria-label="July 10, 2026" class="calendar-grid-item" data-date="2026-07-10" data-day="10" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    10
                  </span>
                </div>
                <div aria-label="July 11, 2026" class="calendar-grid-item" data-date="2026-07-11" data-day="11" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    11
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="July 12, 2026" class="calendar-grid-item" data-date="2026-07-12" data-day="12" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    12
                  </span>
                </div>
                <div aria-label="July 13, 2026" class="calendar-grid-item" data-date="2026-07-13" data-day="13" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    13
                  </span>
                </div>
                <div aria-label="July 14, 2026" class="calendar-grid-item" data-date="2026-07-14" data-day="14" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    14
                  </span>
                </div>
                <div aria-label="July 15, 2026" class="calendar-grid-item" data-date="2026-07-15" data-day="15" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    15
                  </span>
                </div>
                <div aria-label="July 16, 2026" class="calendar-grid-item" data-date="2026-07-16" data-day="16" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    16
                  </span>
                </div>
                <div aria-label="July 17, 2026" class="calendar-grid-item" data-date="2026-07-17" data-day="17" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    17
                  </span>
                </div>
                <div aria-label="July 18, 2026" class="calendar-grid-item" data-date="2026-07-18" data-day="18" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    18
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="July 19, 2026" class="calendar-grid-item" data-date="2026-07-19" data-day="19" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    19
                  </span>
                </div>
                <div aria-label="July 20, 2026" class="calendar-grid-item" data-date="2026-07-20" data-day="20" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    20
                  </span>
                </div>
                <div aria-label="July 21, 2026" class="calendar-grid-item" data-date="2026-07-21" data-day="21" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    21
                  </span>
                </div>
                <div aria-label="July 22, 2026" class="calendar-grid-item" data-date="2026-07-22" data-day="22" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light current-day font-weight-bold rounded-circle text-dark text-nowrap">
                    22
                  </span>
                </div>
                <div aria-label="July 23, 2026" class="calendar-grid-item" data-date="2026-07-23" data-day="23" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    23
                  </span>
                </div>
                <div aria-label="July 24, 2026" class="calendar-grid-item" data-date="2026-07-24" data-day="24" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    24
                  </span>
                </div>
                <div aria-label="July 25, 2026" class="calendar-grid-item" data-date="2026-07-25" data-day="25" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    25
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="July 26, 2026" class="calendar-grid-item" data-date="2026-07-26" data-day="26" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    26
                  </span>
                </div>
                <div aria-label="July 27, 2026" class="calendar-grid-item" data-date="2026-07-27" data-day="27" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    27
                  </span>
                </div>
                <div aria-label="July 28, 2026" class="calendar-grid-item" data-date="2026-07-28" data-day="28" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    28
                  </span>
                </div>
                <div aria-label="July 29, 2026" class="calendar-grid-item" data-date="2026-07-29" data-day="29" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    29
                  </span>
                </div>
                <div aria-label="July 30, 2026" class="calendar-grid-item" data-date="2026-07-30" data-day="30" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    30
                  </span>
                </div>
                <div aria-label="July 31, 2026" class="calendar-grid-item csm-last-day" data-date="2026-07-31" data-day="31" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    31
                  </span>
                </div>
                <div aria-label="August 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-01" data-day="1" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    1
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-02" data-day="2" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    2
                  </span>
                </div>
                <div aria-label="August 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-03" data-day="3" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    3
                  </span>
                </div>
                <div aria-label="August 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-04" data-day="4" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    4
                  </span>
                </div>
                <div aria-label="August 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-05" data-day="5" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    5
                  </span>
                </div>
                <div aria-label="August 6, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-06" data-day="6" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    6
                  </span>
                </div>
                <div aria-label="August 7, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-07" data-day="7" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    7
                  </span>
                </div>
                <div aria-label="August 8, 2026" class="calendar-grid-item next-month-day" data-date="2026-08-08" data-day="8" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div class="calendar dp-calendar form-control h-auto pt-2 text-center">
            <div aria-atomic="true" aria-live="polite" class="calendar-grid-caption font-weight-bold text-center" id="date-range-time-1-3gd7-grid-end-caption">
              August 2026
            </div>
            <div aria-hidden="true" class="calendar-grid-weekdays" role="row">
              <small aria-label="Sunday" class="calendar-grid-day col" role="columnheader" title="Sunday">
                Sun
              </small>
              <small aria-label="Monday" class="calendar-grid-day col" role="columnheader" title="Monday">
                Mon
              </small>
              <small aria-label="Tuesday" class="calendar-grid-day col" role="columnheader" title="Tuesday">
                Tue
              </small>
              <small aria-label="Wednesday" class="calendar-grid-day col" role="columnheader" title="Wednesday">
                Wed
              </small>
              <small aria-label="Thursday" class="calendar-grid-day col" role="columnheader" title="Thursday">
                Thu
              </small>
              <small aria-label="Friday" class="calendar-grid-day col" role="columnheader" title="Friday">
                Fri
              </small>
              <small aria-label="Saturday" class="calendar-grid-day col" role="columnheader" title="Saturday">
                Sat
              </small>
            </div>
            <div aria-label="Calendar for August 2026" aria-labelledby="date-range-time-1-3gd7-grid-end-caption" aria-roledescription="Calendar" class="calendar-grid" id="date-range-time-1-3gd7-grid-end" role="grid">
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="July 26, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-26" data-day="26" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    26
                  </span>
                </div>
                <div aria-label="July 27, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-27" data-day="27" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    27
                  </span>
                </div>
                <div aria-label="July 28, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-28" data-day="28" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    28
                  </span>
                </div>
                <div aria-label="July 29, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-29" data-day="29" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    29
                  </span>
                </div>
                <div aria-label="July 30, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-30" data-day="30" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    30
                  </span>
                </div>
                <div aria-label="July 31, 2026" class="calendar-grid-item previous-month-day" data-date="2026-07-31" data-day="31" data-month="7" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    31
                  </span>
                </div>
                <div aria-label="August 1, 2026" class="calendar-grid-item cem-first-day" data-date="2026-08-01" data-day="1" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    1
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 2, 2026" class="calendar-grid-item" data-date="2026-08-02" data-day="2" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    2
                  </span>
                </div>
                <div aria-label="August 3, 2026" class="calendar-grid-item" data-date="2026-08-03" data-day="3" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    3
                  </span>
                </div>
                <div aria-label="August 4, 2026" class="calendar-grid-item" data-date="2026-08-04" data-day="4" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    4
                  </span>
                </div>
                <div aria-label="August 5, 2026" class="calendar-grid-item" data-date="2026-08-05" data-day="5" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    5
                  </span>
                </div>
                <div aria-label="August 6, 2026" class="calendar-grid-item" data-date="2026-08-06" data-day="6" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    6
                  </span>
                </div>
                <div aria-label="August 7, 2026" class="calendar-grid-item" data-date="2026-08-07" data-day="7" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    7
                  </span>
                </div>
                <div aria-label="August 8, 2026" class="calendar-grid-item" data-date="2026-08-08" data-day="8" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    8
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 9, 2026" class="calendar-grid-item" data-date="2026-08-09" data-day="9" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    9
                  </span>
                </div>
                <div aria-label="August 10, 2026" class="calendar-grid-item" data-date="2026-08-10" data-day="10" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    10
                  </span>
                </div>
                <div aria-label="August 11, 2026" class="calendar-grid-item" data-date="2026-08-11" data-day="11" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    11
                  </span>
                </div>
                <div aria-label="August 12, 2026" class="calendar-grid-item" data-date="2026-08-12" data-day="12" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    12
                  </span>
                </div>
                <div aria-label="August 13, 2026" class="calendar-grid-item" data-date="2026-08-13" data-day="13" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    13
                  </span>
                </div>
                <div aria-label="August 14, 2026" class="calendar-grid-item" data-date="2026-08-14" data-day="14" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    14
                  </span>
                </div>
                <div aria-label="August 15, 2026" class="calendar-grid-item" data-date="2026-08-15" data-day="15" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    15
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 16, 2026" class="calendar-grid-item" data-date="2026-08-16" data-day="16" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    16
                  </span>
                </div>
                <div aria-label="August 17, 2026" class="calendar-grid-item" data-date="2026-08-17" data-day="17" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    17
                  </span>
                </div>
                <div aria-label="August 18, 2026" class="calendar-grid-item" data-date="2026-08-18" data-day="18" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    18
                  </span>
                </div>
                <div aria-label="August 19, 2026" class="calendar-grid-item" data-date="2026-08-19" data-day="19" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    19
                  </span>
                </div>
                <div aria-label="August 20, 2026" class="calendar-grid-item" data-date="2026-08-20" data-day="20" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    20
                  </span>
                </div>
                <div aria-label="August 21, 2026" class="calendar-grid-item" data-date="2026-08-21" data-day="21" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    21
                  </span>
                </div>
                <div aria-label="August 22, 2026" class="calendar-grid-item" data-date="2026-08-22" data-day="22" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    22
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 23, 2026" class="calendar-grid-item" data-date="2026-08-23" data-day="23" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    23
                  </span>
                </div>
                <div aria-label="August 24, 2026" class="calendar-grid-item" data-date="2026-08-24" data-day="24" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    24
                  </span>
                </div>
                <div aria-label="August 25, 2026" class="calendar-grid-item" data-date="2026-08-25" data-day="25" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    25
                  </span>
                </div>
                <div aria-label="August 26, 2026" class="calendar-grid-item" data-date="2026-08-26" data-day="26" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    26
                  </span>
                </div>
                <div aria-label="August 27, 2026" class="calendar-grid-item" data-date="2026-08-27" data-day="27" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    27
                  </span>
                </div>
                <div aria-label="August 28, 2026" class="calendar-grid-item" data-date="2026-08-28" data-day="28" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    28
                  </span>
                </div>
                <div aria-label="August 29, 2026" class="calendar-grid-item" data-date="2026-08-29" data-day="29" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    29
                  </span>
                </div>
              </div>
              <div class="calendar-grid-row" role="row" style="display: contents;">
                <div aria-label="August 30, 2026" class="calendar-grid-item" data-date="2026-08-30" data-day="30" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    30
                  </span>
                </div>
                <div aria-label="August 31, 2026" class="calendar-grid-item cem-last-day" data-date="2026-08-31" data-day="31" data-month="8" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light font-weight-bold rounded-circle text-dark text-nowrap">
                    31
                  </span>
                </div>
                <div aria-label="September 1, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-01" data-day="1" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    1
                  </span>
                </div>
                <div aria-label="September 2, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-02" data-day="2" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    2
                  </span>
                </div>
                <div aria-label="September 3, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-03" data-day="3" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    3
                  </span>
                </div>
                <div aria-label="September 4, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-04" data-day="4" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    4
                  </span>
                </div>
                <div aria-label="September 5, 2026" class="calendar-grid-item next-month-day" data-date="2026-09-05" data-day="5" data-month="9" data-year="2026" role="gridcell" tabindex="-1">
                  <span class="border-0 btn btn-outline-light rounded-circle text-muted text-nowrap">
                    5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer class="border-top small text-center">
          <div aria-live="polite" class="small">
            Use cursor keys to navigate calendar dates
          </div>
        </footer>
        <div aria-labelledby="date-range-time-1-3gd7-date-ranges-title" class="date-range-display" role="region" tabindex="0">
          <div class="sr-only visually-hidden" id="date-range-time-1-3gd7-date-ranges-title">
            Selected date and time range
          </div>
          <div class="date-ranges">
            <span class="start-end-ranges">
              <span class="start-date">
                N/A
              </span>
              <label class="sr-only visually-hidden" for="date-range-time-1-3gd7-start-time" id="date-range-time-1-3gd7-start-time-label">
                Start time
              </label>
              <input aria-describedby="date-range-time-1-3gd7-warning" aria-labelledby="date-range-time-1-3gd7-start-time-label" autocomplete="off" class="form-control time-input" data-type="start" id="date-range-time-1-3gd7-start-time" inputmode="numeric" maxlength="5" type="text" value="00:00">
              <span class="to-spacing">
                -
              </span>
              <span class="end-date">
                N/A
              </span>
              <label class="sr-only visually-hidden" for="date-range-time-1-3gd7-end-time" id="date-range-time-1-3gd7-end-time-label">
                End time
              </label>
              <input aria-describedby="date-range-time-1-3gd7-warning" aria-labelledby="date-range-time-1-3gd7-end-time-label" autocomplete="off" class="form-control time-input" data-type="end" id="date-range-time-1-3gd7-end-time" inputmode="numeric" maxlength="5" type="text" value="00:00">
            </span>
          </div>
          <div aria-live="assertive" class="warning-message" id="date-range-time-1-3gd7-warning"></div>
        </div>
      </div>
    </div>
  </div>
</date-range-time-picker-component>
`;
